# emulation

./: CMakeLists.txt  main.cpp  readme.md
core/: chip8.cpp  chip8.h
